--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,14 +30,14 @@ dependencies = [
 ]
 
 [project.scripts]
-office-addins-mcp-server = "src.server:main"
+office-addins-mcp-server = "office_addins_mcp_server.server:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
+packages = ["office_addins_mcp_server"]
 
 [tool.uv]
 dev-dependencies = []
