--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-# Use the official MCP SDK rather than the third‑party fastmcp package.
+# Core MCP dependencies (from existing project)
 mcp[cli]>=0.1.0
 httpx>=0.27.0
+python-dotenv>=1.0.0
+
+# Starlette and ASGI server dependencies for Azure App Service
+starlette>=0.37.0
+uvicorn[standard]>=0.24.0
+
+# Additional production dependencies
+gunicorn>=21.0.0
