--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,4 +40,8 @@ build-backend = "hatchling.build"
 packages = ["office_addins_mcp_server"]
 
 [tool.uv]
-dev-dependencies = []
+dev-dependencies = [
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-httpx>=0.35.0",
+]
